--- a/public/chat/index.ejs
+++ b/public/chat/index.ejs
@@ -3,25 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/chat/style.css" />
-    <title>Chat</title>
+    <title>Chat como WhatsApp</title>
+    <link rel="stylesheet" type="text/css" href="/chat/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Roboto:ital,wght@0,100;1,900&family=Sulphur+Point:wght@700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-
   <body>
-    <h1>Creating a chat</h1>
-
-    <div>
-      <ul id="users">
-        <% if(email){%>
-        <li id="NewUser"><%= email%></li>
-        <% }%>
-      </ul>
-
-      <div id="chat">
-        <ul id="messages"></ul>
+    <div class="chat-container">
+      <div class="chat-sidebar">
+        <button class="back-button">←</button>
+        <h1 class="chat-title">Chats</h1>
+        <ul id="chat-list" class="chat-list">
+          <%if(email){%>
+          <li id="user" isNew="true" class="user">
+            <img
+              src="https://static-00.iconduck.com/assets.00/profile-circle-icon-2048x2048-cqe5466q.png"
+              class="imagen"
+              alt="Imagen de Usuario 1"
+            />
+            <%=email%>
+          </li>
+          <%}%>
+        </ul>
+      </div>
+      <div class="chat-section">
+        <div class="chat-header">
+          <h2>Chat con Usuario 1</h2>
+        </div>
+        <div class="chat-messages" id="chat-messages">
+          <!-- Aquí se mostrarán los mensajes -->
+        </div>
+        <form id="chat-form" class="chat-input"></form>
       </div>
     </div>
 
-    <script type="module" src="/chat/main.js"></script>
+    <!-- Agregar el contenedor de vista emergente al final del body -->
+    <div id="image-popup" class="image-popup">
+      <span class="close-popup" id="close-popup">&times;</span>
+      <img
+        class="popup-content"
+        id="popup-content"
+        src=""
+        alt="Imagen emergente"
+      />
+    </div>
+
+    <script type="module" src="/chat/script.js"></script>
   </body>
 </html>
