--- a/MainPageUser/MainUser.css
+++ b/MainPageUser/MainUser.css
@@ -4,7 +4,9 @@
 }
 
 body{
-    background: #0A1319;
+    background-image: url(/FOTOSINTEGRADOR/FONDO.png); 
+    background-size: cover;
+    background-repeat: no-repeat;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -108,6 +110,7 @@ header {
 }
 
 .menú ul {
+    z-index: 1000;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -148,6 +151,7 @@ header {
 }
 
 .submenu ul {
+    z-index: 1000;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -183,6 +187,7 @@ header {
 }
 
 .categorias-lista ul {
+    z-index: 1000;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -212,9 +217,6 @@ header {
     color: white;
     transform: translateY(-2px);
 }
-
-
-
 
 .FotoPerfil {
     margin-top: -15px;
@@ -268,10 +270,6 @@ header {
     transform: translateY(-2px);
 }
 
-
-
-
-
 #searchBox {
     display: block;
     position: relative;
@@ -284,7 +282,7 @@ header {
     align-items: center;
     justify-content: left;
     gap: 8px;
-    background: #121e25;
+    background-color: rgba(18, 30, 37, 0.6);
     border-radius: 50px;
     position: relative;
     margin: 0 auto 0 auto;
@@ -363,17 +361,18 @@ margin-bottom: 30px;
 width: 550px;
 height: 265px;
 position: relative;
+border-radius: 5px;
 }
 
 .imgprin{
 margin-top: 5px;
 margin-left: 5px;
 margin-right: 5px;
-border: 5px solid #0E232E;
+border-radius: 5px;
 width: 100%;
 height: 100%;
-width: 330px;
-height: 190px;
+width: 340px;
+height: 200px;
 object-fit: cover;
 position: absolute;
 top: 0;
@@ -394,29 +393,32 @@ flex-direction: column;
 .imgsec{
 margin-top: 5px;
 margin-right: 5px;
-border: 5px solid #0E232E;
+border-radius: 5px;
 width: 100%;
 height: 100%;
-width: 185px;
-height: 87.5px;
+width: 195px;
+height: 97.5px;
 object-fit: cover;
 }
 
 .descripcion{
-margin: 5px;
-width: 540px;
-height: 50px;
-position: absolute;
-bottom: 0;
-left: 0;
-display: flex;
-align-items: center;
-justify-content: center;
-background: #0E232E;
+    margin: 5px;
+    width: 540px;
+    height: 50px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    background: #010b14;
+    border: 1px solid #031828;
+    box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
 }
 
 footer{
-    background: #0D1A22;
+    background: #000c12;
     margin-top: auto;
     height: 60px;
     width: 100%;
