--- a/signin/signin.css
+++ b/signin/signin.css
@@ -59,7 +59,7 @@ body {
     display: block;
     font-size: 0.875rem;
     font-weight: 500;
-    color: #6b7280;
+    color: #a7a7a7;
   }
   
   .input-container {
