--- a/public/MainPage/style.css
+++ b/public/MainPage/style.css
@@ -1,3 +1,437 @@
-.Images {
-  width: 50%;
+* {
+  font-family: 'Poppins', sans-serif;
+  color: white;
+}
+
+body {
+  background: #0a1319;
+  margin: 0;
+  padding: 0;
+  align-items: center;
+  justify-content: center;
+}
+
+#container {
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.carousel {
+  display: flex;
+  grid-template-columns: repeat(3, 1fr);
+  align-items: center;
+  overflow: hidden;
+}
+
+.carousel-container {
+  display: flex;
+  place-content: center;
+  margin: auto;
+}
+
+#prevBtn svg,
+#nextBtn svg {
+  width: 40px;
+  height: 40px;
+}
+
+#prevBtn,
+#nextBtn {
+  position: absolute;
+  cursor: pointer;
+  z-index: 100;
+  background-color: transparent;
+  border: none;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+#prevBtn {
+  left: 10px;
+  transform: translateY(-50%);
+  top: 35%;
+}
+
+#nextBtn {
+  right: 10px;
+  transform: translateY(-50%);
+  top: 35%;
+}
+
+#prevBtn:hover,
+#nextBtn:hover {
+  color: white;
+  top: 35%;
+  outline: none;
+}
+
+.slide {
+  transition: opacity 3s cubic-bezier(0.075, 0.82, 0.165, 1);
+  flex: 0 0 100%;
+  width: 100%;
+  height: auto;
+}
+
+.imgcarrousel {
+  position: absolute;
+  transform: translate(-50%);
+  width: 100%;
+  height: 60%;
+}
+
+header {
+  width: 100%;
+  height: 20%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: transparent;
+  z-index: 2;
+}
+
+#logop {
+  top: -10px;
+  left: 2%;
+  width: 200px;
+  float: left;
+}
+
+.menú {
+  top: -8px;
+  flex-grow: 1;
+  justify-content: center;
+}
+
+.menú ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.menú li {
+  justify-content: center;
+  margin: 0px 60px;
+  position: relative;
+}
+
+.menú button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+.menú button:hover {
+  color: white;
+  transform: translateY(-2px);
+}
+
+#submenu {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  transform: translateX(-50%);
+  margin-left: -22px;
+}
+
+.submenu ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.submenu li {
+  justify-content: flex-start;
+  margin: 0;
+}
+
+.submenu button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+  margin-right: 5px;
+}
+
+.submenu button:hover {
+  color: white;
+  transform: translateY(-2px);
+}
+
+.categorias-lista {
+  display: none;
+}
+
+.categorias-lista ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.categorias-lista li {
+  margin: 5px 10px;
+}
+
+.categorias-lista button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+.categorias-lista button:hover {
+  text-decoration: underline;
+  color: white;
+  transform: translateY(-2px);
+}
+
+.Login {
+  margin-top: -15px;
+  width: 200px;
+}
+
+.Login ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.Login li {
+  justify-content: center;
+  margin: 10px;
+}
+
+.Login button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+.Login button:hover {
+  color: white;
+  transform: translateY(-2px);
+}
+
+#searchBox {
+  display: block;
+  position: relative;
+}
+
+.searchBox {
+  display: flex;
+  width: 400px;
+  height: 35px;
+  align-items: center;
+  justify-content: left;
+  gap: 8px;
+  background: #121e25;
+  border-radius: 50px;
+  position: relative;
+  margin: 0 auto 0 auto;
+  border: 1px solid #a7a7a7;
+}
+
+.searchInput {
+  border: none;
+  background: none;
+  outline: none;
+  color: white;
+  font-size: 13px;
+  width: 320px;
+  padding: 8px 16px;
+}
+
+.searchButton {
+  z-index: 30;
+  color: white;
+  position: absolute;
+  right: 8px;
+  width: 35px;
+  height: 35px;
+  top: 0;
+  border-radius: 50%;
+  background: transparent;
+  border: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  cursor: pointer;
+}
+
+.searchButton:hover {
+  transform: translateY(-1px);
+}
+
+.searchButton svg {
+  width: 25px;
+  height: 25px;
+}
+
+.clearfix {
+  clear: both;
+  margin-top: 10px;
+}
+
+main {
+  position: relative;
+  margin-top: 230px;
+}
+
+h2 {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-top: 20px;
+  margin-bottom: 0;
+  margin-left: 50px;
+  color: #f4f4f4;
+}
+
+.publicaciones {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px;
+}
+
+.publicacion {
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-bottom: 30px;
+  width: 550px;
+  height: 265px;
+  position: relative;
+}
+
+.imgprin {
+  margin-top: 5px;
+  margin-left: 5px;
+  margin-right: 5px;
+  border: 5px solid #0e232e;
+  width: 100%;
+  height: 100%;
+  width: 330px;
+  height: 190px;
+  object-fit: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.secundaries {
+  position: absolute;
+  top: 0;
+  left: 350px;
+  display: flex;
+  flex-direction: column;
+}
+
+.imgsec {
+  margin-top: 5px;
+  margin-right: 5px;
+  border: 5px solid #0e232e;
+  width: 100%;
+  height: 100%;
+  width: 185px;
+  height: 87.5px;
+  object-fit: cover;
+}
+
+.descripcion {
+  margin: 5px;
+  width: 540px;
+  height: 50px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #0e232e;
+}
+
+footer {
+  background: #0d1a22;
+  margin-top: auto;
+  height: 60px;
+  width: 100%;
+  bottom: 0;
+  position: relative;
+}
+
+.patas {
+  flex-grow: 1;
+  display: flex;
+  justify-content: left;
+  align-items: left;
+}
+
+.patas ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+}
+
+.patas li {
+  margin: 0px;
+  margin-left: 5px;
+  margin-right: 80px;
+}
+
+.patas button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+.patas button:hover {
+  color: white;
+  transform: translateY(-1px);
 }
