--- a/MainPage/style.css
+++ b/MainPage/style.css
@@ -5,8 +5,8 @@
 
 body{
     background-image: url(/FOTOSINTEGRADOR/FONDO.png); 
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -316,14 +316,14 @@ header {
 
 main{
     position: relative;
-    margin-top: 230px;
+    margin-top: 240px;
 }
 
 h2{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 0;
     margin-left: 50px;
     color: #F4F4F4;
@@ -401,7 +401,7 @@ object-fit: cover;
 }
 
 footer{
-    background: #0D1A22;
+    background: #000C12;
     margin-top: auto;
     height: 60px;
     width: 100%;
