--- a/MainPageVendedor/MainVend.css
+++ b/MainPageVendedor/MainVend.css
@@ -5,8 +5,8 @@
 
 body{
     background-image: url(/FOTOSINTEGRADOR/FONDO.png); 
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-size: contain;
+    background-repeat: repeat;
     margin: 0;
     padding: 0;
     align-items: center;
@@ -340,7 +340,7 @@ h2{
     display: flex;
     align-items: center;
     justify-content: flex-start;
-    margin-top: 20px;
+    margin-top: 50px;
     margin-bottom: 0;
     margin-left: 50px;
     color: #F4F4F4;
