--- a/public/chat/index.ejs
+++ b/public/chat/index.ejs
@@ -15,8 +15,10 @@
   <body>
     <div class="chat-container">
       <div class="chat-sidebar">
-        <button class="back-button">←</button>
-        <h1 class="chat-title">Chats</h1>
+        <div>
+          <button class="back-button">←</button>
+          <h1 class="chat-title">Chats</h1>
+        </div>
         <ul id="chat-list" class="chat-list">
           <%if(email){%>
           <li id="user" isNew="true" class="user newUser"><%=email%></li>
