--- a/public/MainPage/style.css
+++ b/public/MainPage/style.css
@@ -4,7 +4,9 @@
 }
 
 body {
-  background: #0a1319;
+  background-image: url(../pictures/FONDO.png);
+  background-size: cover;
+  background-repeat: no-repeat;
   margin: 0;
   padding: 0;
   align-items: center;
@@ -17,6 +19,11 @@ body {
   padding: 0;
   display: flex;
   flex-direction: column;
+}
+
+.container-header {
+  width: 100%;
+  height: 150px;
 }
 
 .carousel {
@@ -85,6 +92,7 @@ body {
 }
 
 header {
+  margin-top: 3%;
   width: 100%;
   height: 20%;
   display: flex;
@@ -99,6 +107,11 @@ header {
   left: 2%;
   width: 200px;
   float: left;
+  z-index: 100;
+}
+
+#logop:hover {
+  cursor: pointer;
 }
 
 .menú {
@@ -108,6 +121,7 @@ header {
 }
 
 .menú ul {
+  z-index: 1000;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -148,6 +162,7 @@ header {
 }
 
 .submenu ul {
+  z-index: 1000;
   list-style: none;
   display: flex;
   justify-content: center;
@@ -183,6 +198,7 @@ header {
 }
 
 .categorias-lista ul {
+  z-index: 1000;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -216,6 +232,7 @@ header {
 .Login {
   margin-top: -15px;
   width: 200px;
+  z-index: 100;
 }
 
 .Login ul {
@@ -248,6 +265,59 @@ header {
   transform: translateY(-2px);
 }
 
+.Foto {
+  background: #0a1319;
+  width: 45px;
+  height: 45px;
+  border-radius: 50px;
+  margin: 0;
+  border: 2px solid #0a1319;
+  object-fit: cover;
+}
+
+.FotoPerfil {
+  margin-top: -15px;
+  width: 200px;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  z-index: 100;
+}
+
+.FotoPerfil ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.FotoPerfil li {
+  list-style: none;
+  justify-content: center;
+  margin-top: 10px;
+  margin-right: 5px;
+}
+
+.FotoPerfil button {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 900;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  text-decoration: none;
+  color: #a7a7a7;
+  transition: color 0s ease;
+}
+
+.FotoPerfil button:hover {
+  color: white;
+  transform: translateY(-2px);
+}
+
 #searchBox {
   display: block;
   position: relative;
@@ -260,7 +330,7 @@ header {
   align-items: center;
   justify-content: left;
   gap: 8px;
-  background: #121e25;
+  background-color: rgba(18, 30, 37, 0.6);
   border-radius: 50px;
   position: relative;
   margin: 0 auto 0 auto;
@@ -339,17 +409,18 @@ h2 {
   width: 550px;
   height: 265px;
   position: relative;
+  border-radius: 5px;
 }
 
 .imgprin {
   margin-top: 5px;
   margin-left: 5px;
   margin-right: 5px;
-  border: 5px solid #0e232e;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
-  width: 330px;
-  height: 190px;
+  width: 340px;
+  height: 200px;
   object-fit: cover;
   position: absolute;
   top: 0;
@@ -370,25 +441,28 @@ h2 {
 .imgsec {
   margin-top: 5px;
   margin-right: 5px;
-  border: 5px solid #0e232e;
+  border-radius: 5px;
   width: 100%;
   height: 100%;
-  width: 185px;
-  height: 87.5px;
+  width: 195px;
+  height: 97.5px;
   object-fit: cover;
 }
 
 .descripcion {
   margin: 5px;
   width: 540px;
-  height: 50px;
   position: absolute;
   bottom: 0;
   left: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #0e232e;
+  padding-left: 4px;
+  border-radius: 5px;
+  background: #010b14;
+  border: 1px solid #031828;
+  box-shadow: 0 0 10px rgba(3, 24, 40, 0.9);
 }
 
 footer {
@@ -400,26 +474,26 @@ footer {
   position: relative;
 }
 
-.patas {
+.footer {
   flex-grow: 1;
   display: flex;
   justify-content: left;
   align-items: left;
 }
 
-.patas ul {
+.footer ul {
   list-style: none;
   display: flex;
   flex-direction: row;
 }
 
-.patas li {
+.footer li {
   margin: 0px;
   margin-left: 5px;
   margin-right: 80px;
 }
 
-.patas button {
+.footer button {
   font-family: 'Poppins', sans-serif;
   font-size: 15px;
   background-color: transparent;
@@ -431,7 +505,7 @@ footer {
   transition: color 0s ease;
 }
 
-.patas button:hover {
+.footer button:hover {
   color: white;
   transform: translateY(-1px);
 }
