--- a/public/signUp/index.ejs
+++ b/public/signUp/index.ejs
@@ -1,56 +1,117 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Roboto:ital,wght@0,100;1,900&family=Sulphur+Point:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" type="text/css" href="./signUp/style.css" />
+  </head>
+  <body>
+    <div class="main-container"></div>
+    <div class="flex-container">
+      <div class="logo-container">
+        <img class="logo" src="../pictures/logo.png" alt="Your Company" />
+        <h2 class="title">Create your account</h2>
+      </div>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.tailwindcss.com"></script>
+      <div class="form-container">
+        <form id="createAnAccount" class="form">
+          <div class="form-group">
+            <label for="nombre" class="label">Nombre</label>
+            <div class="input-container">
+              <input
+                id="nombre"
+                name="names"
+                type="text"
+                required
+                class="input"
+              />
+            </div>
+          </div>
 
-  <link rel="stylesheet" href="/signUp/style.css" />
-  <title>U'DesEv</title>
-</head>
+          <div class="form-group">
+            <label for="apellidos" class="label">Apellidos</label>
+            <div class="input-container">
+              <input
+                id="apellidos"
+                name="lastnames"
+                type="text"
+                required
+                class="input"
+              />
+            </div>
+          </div>
 
-<body class="bg-slate-900 text-white">
-  <header></header>
-  <nav>
-    <ul class="flex justify-around h-20 items-center px-8 bg-slate-800 text-2xl text-white">
-      <li>
-        <a href="http://localhost:4000/">
-          <figure class="flex items-center gap-2">
-            <img src="../images/icon.jpeg" class="h-16 rounded-full" alt="Logo" />
-            <figcaption>U'DesEv</figcaption>
-          </figure>
-        </a>
-      </li>
-      <li>
-        <a href="http://localhost:4000/BecomeSeller">Sell</a>
-      </li>
-      <li>
-        <a href="http://localhost:4000/CreateAccount">SignUp</a>
-      </li>
-    </ul>
-  </nav>
-  <main>
-    <section>
-      <form id="createAnAccount">
-        <label for="email">Email</label>
-        <input class="text-black" type="email" name="email" placeholder="Write your email" />
-        <label for="names">Names</label>
-        <input class="text-black" type="text" name="names" placeholder="Write your names here" />
-        <label for="lastnames">Last Names</label>
-        <input class="text-black" type="text" name="lastnames" placeholder="Write your last names here" />
-        <label for="phone">Phone</label>
-        <input class="text-black" type="tel" name="phone" placeholder="Write your number phone here" />
-        <label for="password">Password</label>
-        <input class="text-black" type="password" name="password" placeholder="******" />
-        <input type="submit" value="Sign Up" />
-      </form>
-    </section>
-    <section>
-      <a href="http://localhost:4000/signIn">Sign In</a>
-    </section>
-  </main>
-  <script src="/signUp/main.js"></script>
-</body>
+          <div class="form-group">
+            <label for="telefono" class="label">Teléfono</label>
+            <div class="input-container">
+              <input
+                id="telefono"
+                name="phone"
+                type="tel"
+                required
+                class="input"
+              />
+            </div>
+          </div>
 
+          <div class="form-group">
+            <label for="email" class="label">Email address</label>
+            <div class="input-container">
+              <input
+                id="email"
+                name="email"
+                type="email"
+                autocomplete="email"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="password" class="label">Password</label>
+            <div class="input-container">
+              <input
+                id="password"
+                name="password"
+                type="password"
+                autocomplete="current-password"
+                required
+                class="input"
+              />
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label for="confirm-password" class="label">Confirm password</label>
+            <div class="input-container">
+              <input
+                id="confirm-password"
+                name="confirmPassword"
+                type="password"
+                autocomplete="current-password"
+                required
+                class="input"
+              />
+            </div>
+            <p id="error" class="error"></p>
+          </div>
+
+          <div class="form-group">
+            <button type="submit" class="button">Sign up</button>
+          </div>
+        </form>
+
+        <p class="message">
+          Already a member?
+          <a href="#" class="link">Sign in.</a>
+        </p>
+      </div>
+    </div>
+    <script src="./signUp/main.js"></script>
+  </body>
 </html>
