--- a/public/post/style.css
+++ b/public/post/style.css
@@ -59,6 +59,15 @@ body {
   width: 100%;
   height: 100%;
   max-width: 400px; /* Establecer el ancho máximo de la imagen en 300 píxeles */
+  object-fit: fill; /* Recortar la imagen para que cubra todo el espacio sin deformarse */
+  border-radius: 5px;
+}
+
+.item-secondary {
+  width: 100%;
+  height: 100%;
+  max-width: 400px; /* Establecer el ancho máximo de la imagen en 300 píxeles */
+  max-height: 200px;
   object-fit: cover; /* Recortar la imagen para que cubra todo el espacio sin deformarse */
   border-radius: 5px;
 }
@@ -88,6 +97,8 @@ body {
   display: flex;
   align-items: center;
   gap: 8px;
+  text-decoration: none;
+  color: #fff;
 }
 
 .infoSecondary img {
